# FLAT

./: .gitignore  README.md
apps/: .RtreeTest.cpp.swp  BruteTest.cpp  FLATGenerator.cpp  FLATTest.cpp  GenerateRandomData.cpp  RtreeGenerator.cpp  RtreeTest.cpp  RtreeTest.cpp.orig  RtreeTestNew.cpp
cmake/: CMakeLists.txt
include/: Bitmap.hpp  Box.hpp  ExternalSort.hpp  FLATIndex.hpp  HilbertRtreeIndex.hpp  KDIndex.hpp  PayLoad.hpp  PriorityRtreeIndex.hpp  RtreeIndex.hpp  SeedBuilder.hpp
src/: Box.cpp  BufferedFile.cpp  Cone.cpp  DataFileReader.cpp  ExternalSort.cpp  FLATIndex.cpp  HilbertRtreeIndex.cpp  KDIndex.cpp  Mesh.cpp  Metadata.cpp  PayLoad.cpp  PriorityRtreeIndex.cpp  RtreeIndex.cpp  SeedBuilder.cpp  Segment.cpp  Soma.cpp  SpatialObject.cpp  SpatialObjectFactory.cpp  SpatialObjectStream.cpp  SpatialQuery.cpp  Sphere.cpp  Synapse.cpp  Triangle.cpp  Vertex.cpp  hilbert.cpp
test/: .launchTest.sh.swp  genTest.sh  launchTest.sh  testA5000K50K.txt  testB50K5K.txt  testC50K0dot5K.txt
